Resolve Codility problem Ladder